--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "chai": "^4.1.2",
     "mocha": "^5.2.0",
     "ts-node": "^6.0.5",
-    "typescript": "^2.8.3"
+    "typescript": "^2.8.3",
+    "vscode-languageserver": "^4.1.3"
   },
   "engines": {
     "node": ">=7.9"
