--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
 language: node_js
 sudo: false
 node_js:
-  - 8
-  - 9
   - 10
-  - latest
-  - lts
+  - 11
+  - node
 
 cache: npm
 
@@ -20,4 +18,4 @@ deploy:
   on:
     branch: master
     tags: true
-    node: latest
+    node: node
