--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "@types/mocha": "^5.2.5",
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
-    "ts-node": "^7.0.1",
-    "typescript": "^3.2.2",
-    "vscode-languageserver": "^5.2.1"
+    "ts-node": "^8.0.2",
+    "typescript": "^3.3.3",
+    "vscode-languageserver": "^5.3.0-next.1"
   },
   "engines": {
     "node": ">=7.9"
