--- a/package.json
+++ b/package.json
@@ -25,16 +25,16 @@
     "url": "https://github.com/nikeee/dot-language-support.git"
   },
   "dependencies": {
-    "vscode-languageserver-types": "^3.14.0"
+    "vscode-languageserver-types": "^3.15.1"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.6",
-    "@types/mocha": "^5.2.7",
+    "@types/chai": "^4.2.9",
+    "@types/mocha": "^7.0.1",
     "chai": "^4.2.0",
-    "mocha": "^6.2.2",
-    "ts-node": "^8.5.4",
-    "typescript": "^3.7.3",
-    "vscode-languageserver": "^5.3.0-next.1"
+    "mocha": "^7.1.0",
+    "ts-node": "^8.6.2",
+    "typescript": "^3.8.2",
+    "vscode-languageserver": "^6.1.1"
   },
   "engines": {
     "node": ">=7.9"
