--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -32,5 +32,5 @@ jobs:
     - run: npm test
       env:
         CI: true
-    - run: npm config set "//registry.npmjs.org/:_authToken" "${{ secrets.NPM_TOKEN }}""
+    - run: npm config set "//registry.npmjs.org/:_authToken" "${{ secrets.NPM_TOKEN }}"
     - run: npm publish
