--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "chai": "^4.3.6",
     "mocha": "^10.0.0",
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.4",
-    "vscode-languageserver": "^7.0.0"
+    "typescript": "^4.6.4"
   },
   "engines": {
     "node": ">=16"
