--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "url": "https://github.com/nikeee/dot-language-support.git"
   },
   "dependencies": {
+    "vscode-languageserver-textdocument": "^1.0.4",
     "vscode-languageserver-types": "^3.16.0"
   },
   "devDependencies": {
