--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "module": "./lib/esm/index.js",
   "types": "./lib/esm/index.d.ts",
   "scripts": {
-    "test": "mocha -r ts-node/register tests/**/*.spec.ts tests/*.spec.ts",
+    "test": "mocha --loader ts-node/esm -r ts-node/register tests/**/*.spec.ts tests/*.spec.ts",
     "clean": "rimraf lib",
     "compile:esm": "tsc --target esnext --module esnext --outDir lib/esm",
     "compile:cjs": "tsc --target es2017 --module commonjs --outDir lib/cjs",
