--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "module": "./lib/esm/index.js",
   "types": "./lib/esm/index.d.ts",
   "scripts": {
-    "test": "mocha --loader ts-node/esm -r ts-node/register tests/**/*.spec.ts tests/*.spec.ts",
+    "test": "jest --rootDir=tests",
     "clean": "rimraf lib",
     "compile:esm": "tsc --target esnext --module esnext --outDir lib/esm",
     "compile:cjs": "tsc --target es2017 --module commonjs --outDir lib/cjs",
@@ -33,10 +33,13 @@
   },
   "devDependencies": {
     "@types/chai": "^4.3.1",
+    "@types/jest": "^27.5.0",
     "@types/mocha": "^9.1.1",
     "chai": "^4.3.6",
+    "jest": "^28.0.3",
     "mocha": "^10.0.0",
     "rimraf": "^3.0.2",
+    "ts-jest": "^28.0.1",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
   },
