--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -14,10 +14,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Use Node.js 18.x
+    - name: Use Node.js 18
       uses: actions/setup-node@v1
       with:
-        node-version: 18.x
+        node-version: 18
 
     - uses: actions/cache@v3
       with:
