--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -26,7 +26,7 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-node-
 
-    - run: npm ci
+    - run: npm ci --legacy-peer-deps
     - run: npm run compile
     - run: npm test
       env:
