--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -25,7 +25,7 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-node-${{ matrix.node-version }}-
 
-    - run: npm ci
+    - run: npm ci --legacy-peer-deps
     - run: npm run compile
     - run: npm test
       env:
