--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -17,13 +17,7 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-
-    - uses: actions/cache@v3
-      with:
-        path: ~/.npm
-        key: ${{ runner.os }}-node-${{ matrix.node-version }}-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-node-${{ matrix.node-version }}-
+        cache: npm
 
     - run: npm ci --legacy-peer-deps
     - run: npm run compile
