--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "module": "./lib/esm/index.js",
   "types": "./lib/esm/index.d.ts",
   "scripts": {
-    "test": "jest --rootDir=tests",
+    "test": "vitest run",
     "clean": "rimraf lib",
     "compile:esm": "tsc --target esnext --module esnext --outDir lib/esm",
     "compile:cjs": "tsc --target es2017 --module commonjs --outDir lib/cjs",
@@ -36,7 +36,8 @@
     "jest": "^29.3.1",
     "rimraf": "^4.0.4",
     "ts-jest": "^29.0.3",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.3",
+    "vitest": "^0.27.1"
   },
   "engines": {
     "node": ">=18"
