--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "module": "./lib/esm/index.js",
   "types": "./lib/esm/index.d.ts",
   "scripts": {
-    "test": "vitest run",
+    "test": "tsc --noEmit && vitest run",
     "test:coverage": "vitest run --coverage",
     "clean": "rimraf lib",
     "compile:esm": "tsc --target esnext --module esnext --outDir lib/esm",
