--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -19,6 +19,7 @@ jobs:
       with:
         node-version: 18
         cache: npm
+        registry-url: https://registry.npmjs.org
 
     - run: npm ci --legacy-peer-deps
     - run: npm run compile
