--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -25,6 +25,6 @@ jobs:
     - run: npm test
       env:
         CI: true
-    - run: npm publish
+    - run: npm publish --provenance --access public
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
