--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,7 +18,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: npm
 
-    - run: npm ci --legacy-peer-deps
+    - run: npm ci
     - run: npm run compile
     - run: npm test
       env:
