--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     "vscode-languageserver-types": "^3.17.3"
   },
   "devDependencies": {
-    "@vitest/coverage-c8": "^0.32.0",
+    "@vitest/coverage-v8": "^0.32.4",
     "rimraf": "^5.0.1",
-    "typescript": "^5.0.4",
-    "vitest": "^0.32.0"
+    "typescript": "^5.1.6",
+    "vitest": "^0.32.4"
   },
   "engines": {
     "node": ">=18"
