--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -25,7 +25,7 @@ jobs:
         registry-url: https://registry.npmjs.org
 
     - run: npm ci
-    - run: npm run compile
+    - run: npm run build
     - run: npm test
       env:
         CI: true
