--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -19,7 +19,7 @@ jobs:
         cache: npm
 
     - run: npm ci
-    - run: npm run compile
+    - run: npm run build
     - run: npm test
       env:
         CI: true
