--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -27,6 +27,7 @@ jobs:
         registry-url: https://registry.npmjs.org
 
     - run: npm ci
+    - run: npm run ci
     - run: npm run build
     - run: npm test
       env:
