--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "ci": "biome ci ./src",
     "test": "tsc --noEmit && vitest run",
     "test:coverage": "vitest run --coverage",
+    "format": "biome format --write ./src",
+    "lint": "biome lint ./src",
+    "lint:fix": "biome lint --apply ./src",
     "clean": "rimraf lib",
     "build:esm": "tsc --target esnext --module esnext --outDir lib/esm",
     "build:cjs": "tsc --target es2017 --module commonjs --outDir lib/cjs",
