--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test:coverage": "vitest run --coverage",
     "format": "biome format --write ./src",
     "lint": "biome lint ./src",
-    "lint:fix": "biome lint --apply ./src",
+    "lint:fix": "biome lint --write ./src",
     "clean": "rimraf lib",
     "build:esm": "tsc --target esnext --module esnext --outDir lib/esm",
     "build:cjs": "tsc --target es2017 --module commonjs --outDir lib/cjs",
