--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@biomejs/biome": "^2.1.1",
     "@vitest/coverage-v8": "^3.2.4",
     "rimraf": "^6.0.1",
+    "tsup": "^8.5.0",
     "typescript": "^5.8.3",
     "vitest": "^3.2.4"
   },
