--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es2017",
-    "module": "commonjs",
+    "target": "es2023",
+    "module": "esnext",
     "lib": [
       "es2019",
       "dom" // for console
@@ -11,7 +11,6 @@
 
     "noEmit": true,
 
-    "outDir": "lib/cjs",
     "declaration": true,
     "sourceMap": true,
     "removeComments": true,
