--- a/package.json
+++ b/package.json
@@ -36,11 +36,9 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.3",
-    "@vitest/coverage-v8": "^3.2.4",
     "expect": "^30.2.0",
     "tsup": "^8.5.0",
-    "typescript": "^5.9.2",
-    "vitest": "^3.2.4"
+    "typescript": "^5.9.2"
   },
   "engines": {
     "node": ">=22"
