--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "format": "biome format --write ./src",
     "lint": "biome lint ./src",
     "lint:fix": "biome lint --write ./src",
-    "build": "tsup",
+    "build": "tsdown",
     "prepare": "npm run build"
   },
   "keywords": [
@@ -37,7 +37,7 @@
   "devDependencies": {
     "@biomejs/biome": "^2.3.1",
     "expect": "^30.2.0",
-    "tsup": "^8.5.0",
+    "tsdown": "^0.15.12",
     "typescript": "^5.9.3"
   },
   "engines": {
