--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Parser and language service for graphviz (dot) files",
   "author": "Niklas Mollenhauer",
   "license": "MIT",
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./dist/index.mjs",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.mts",
   "type": "module",
   "scripts": {
     "ci": "biome ci ./src",
@@ -35,9 +35,9 @@
     "vscode-languageserver-types": "^3.17.5"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.3.1",
+    "@biomejs/biome": "^2.3.5",
     "expect": "^30.2.0",
-    "tsdown": "^0.16.1",
+    "tsdown": "^0.16.2",
     "typescript": "^5.9.3"
   },
   "engines": {
