--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.mts",
   "scripts": {
-    "ci": "oxlint --type-aware --deny-warnings -f github",
+    "ci": "oxlint --deny-warnings -f github",
     "test": "tsc && node --test '**/*.spec.ts'",
     "test:coverage": "node --test --experimental-test-coverage '**/*.spec.ts'",
     "format": "oxfmt",
