--- a/.editorconfig
+++ b/.editorconfig
@@ -10,9 +10,6 @@ indent_style = tab
 tab_width = 4
 indent_size = 4
 
-[{package,tsconfig}.json]
+[*.json]
 indent_style = space
 indent_size = 2
-
-[*.md]
-trim_trailing_whitespace = false
