--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   "types": "./dist/index.d.mts",
   "type": "module",
   "scripts": {
-    "ci": "biome ci ./src",
+    "ci": "oxlint --type-aware --deny-warnings -f github",
     "test": "tsc && node --test '**/*.spec.ts'",
     "test:coverage": "node --test --experimental-test-coverage '**/*.spec.ts'",
-    "format": "biome format --write ./src",
-    "lint": "biome lint ./src",
-    "lint:fix": "biome lint --write ./src",
+    "format": "oxfmt",
+    "lint": "oxlint --type-aware",
+    "lint:fix": "oxlint --type-aware --fix",
     "build": "tsdown",
     "prepare": "npm run build"
   },
@@ -35,9 +35,11 @@
     "vscode-languageserver-types": "^3.17.5"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.3.12",
     "expect": "^30.2.0",
-    "tsdown": "^0.20.1",
+    "oxfmt": "^0.34.0",
+    "oxlint": "^1.49.0",
+    "oxlint-tsgolint": "^0.14.2",
+    "tsdown": "^0.17.0",
     "typescript": "^5.9.3"
   },
   "engines": {
