--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,3 @@
 {
-	"recommendations": [
-		"EditorConfig.EditorConfig",
-		"dbaeumer.vscode-eslint"
-	]
+  "recommendations": ["EditorConfig.EditorConfig", "dbaeumer.vscode-eslint"]
 }
